2005-04-09  Manish Singh  <yosh@gimp.org>

	* plug-ins/common/gifload.c (GetCode): GetDataBlock returns -1 on
	error, so count should be an int, not an unsigned char. Fixes
	bug #173119.

2005-04-09  Sven Neumann  <sven@gimp.org>

	* plug-ins/winicon/icosave.c: implement color counting without
	changing the image-type to RGB. A save plug-in must not change the
	image.

2005-04-08  Sven Neumann  <sven@gimp.org>

	* plug-ins/winicon/icodialog.c: rewrote preview code to use
	GtkImage and pixbufs. The previous implementation was severily
	broken.

	* plug-ins/winicon/icosave.c: cosmetics.

2005-04-08  Sven Neumann  <sven@gimp.org>

	* plug-ins/winicon/icoload.c: code cleanup, no real changes.

2005-04-08  Simon Budig  <simon@gimp.org>

	* app/tools/gimpvectortool.[ch]: Applied Patch by Sven Neumann
	to use the new statusbar functionality.

2005-04-08  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/animationplay.c: coding style, no real changes.

2005-04-08  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/gauss.c: fixed preview for zero blur radii
	(bug #173039).

2005-04-08  Sven Neumann  <sven@gimp.org>

	* app/base/base.c: include libgimpbase/gimpwin32-io.h.

2005-04-07  Sven Neumann  <sven@gimp.org>

	* libgimpconfig/gimpconfig-path.c: added API documentation.

2005-04-07  Sven Neumann  <sven@gimp.org>

	* app/config/gimpcoreconfig.c
	* app/config/gimpguiconfig.c
	* app/config/gimppluginconfig.c: need to free the return value of
	gimp_config_build_foo_path() now that gimp_param_spec_path() is
	sane and doesn't take ownership of the passed string any longer.

	* plug-ins/FractalExplorer/Dialogs.c
	* plug-ins/gfig/gfig-dialog.c
	* plug-ins/gflare/gflare.c
	* plug-ins/gimpressionist/utils.c: use gimp_config_build_data_path().

	* plug-ins/Lighting/lighting_ui.c
	* plug-ins/common/CML_explorer.c
	* plug-ins/common/channel_mixer.c
	* plug-ins/common/curve_bend.c
	* plug-ins/common/gqbist.c
	* plug-ins/common/spheredesigner.c
	* plug-ins/flame/flame.c